--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,6 @@
 DOMAIN_NAME=abouchfa.42.fr
 
-DATABASE_NAME=Database
+DATABASE_NAME=mariadb
 USER=abouchfa
 USER_PASS=user_pass
 USER_EMAIL=abouchfa@gmail.com
