--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,54 +1,69 @@
-version: "3"
+version: '3'
 
 services:
   mariadb:
+    image: mariadb
     container_name: mariadb
-    build: ./requirements/mariadb/
-    restart: always
-    volumes:
-      - mariadb:/var/lib/mysql/
-    env_file:
-      - .env
+    volumes: 
+      - mariadb:/var/lib/mysql
     networks:
-      - wordpress
-    init : true
-  
-  wordpress:
-    container_name: wordpress
-    build: ./requirements/wordpress
-    volumes:
-      - wordpress:/var/www/wordpress
-    env_file:
-      - .env
-    networks:
-      - wordpress
-    depends_on:
-      - mariadb
-    ports:
-      - 9000:9000
-    restart: always
-    init : true
+      - inception
+    build: 
+      context: requirements/mariadb
+      dockerfile: Dockerfile
+    env_file: .env
+    restart: on-failure
+    expose:
+      - "3306"
 
   nginx:
+    image: nginx
     container_name: nginx
-    depends_on:
-      - wordpress
-    build: ./requirements/nginx/
-    networks:
-      - wordpress
-    ports:
-      - 443:443
-    env_file:
-      - .env
     volumes:
       - wordpress:/var/www/wordpress
-    restart: always
-    init : true
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    build: 
+      context: requirements/nginx
+      dockerfile: Dockerfile
+    env_file: .env
+    ports:
+      - "443:443"
+    restart: on-failure
+
+  wordpress:
+    image: wordpress
+    container_name: wordpress
+    env_file: .env
+    volumes:
+    - wordpress:/var/www/wordpress
+    networks:
+      - inception
+    build: 
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+    depends_on:
+      - mariadb
+    restart: on-failure
+    expose: 
+      - "9000"
+
+volumes:
+  wordpress:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/abouchfa/data/wordpress
+  mariadb:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/abouchfa/data/mariadb
 
 networks:
-  wordpress:
-    driver: bridge
-
-volumes :
-  mariadb:
-  wordpress:
+    inception:
+      driver: bridge
