--- a/srcs/.env
+++ b/srcs/.env
@@ -2,6 +2,5 @@ DOMAIN_NAME=abouchfa.42.fr
 
 DATABASE_NAME=mariadb
 USER=abouchfa
-USER_PASS=user_pass
 USER_EMAIL=abouchfa@gmail.com
-ROOT_PASS=root_pass
+PASS=pass
