--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -11,4 +11,6 @@ RUN sed -i "s/.*bind-address.*/bind-address = 0.0.0.0/" /etc/mysql/mariadb.conf.
 # Copy the script to create the database and the user into the container
 COPY tools/script.sh /script.sh
 
+EXPOSE 3306
+
 ENTRYPOINT ["bash", "script.sh"]
