--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,59 +1,35 @@
-# # to Avoid this error: "nginx: [emerg] no "events" section in configuration"
-# events {}
+# to Avoid this error: "nginx: [emerg] no "events" section in configuration"
+events {}
 
-# http {
-# 	server {
-# 		# Listen on port 443 for HTTPS trafic
-# 	    listen 443 ssl;
+http {
+	server {
+		# Listen on port 443 for HTTPS trafic
+	    listen 443 ssl;
 
-# 		# Server name for the website
-# 		server_name abouchfa.42.fr;
+		# Server name for the website
+		server_name abouchfa.42.fr;
 
-# 		# SSL protocols to allow for HTTPS connections.
-# 	    ssl_protocols TLSv1.2 TLSv1.3;
+		# SSL protocols to allow for HTTPS connections.
+	    ssl_protocols TLSv1.2 TLSv1.3;
 
-# 		# Path to the certificate and key that will be used for HTTPS encryption
-# 	    ssl_certificate /etc/ssl/certs/inception.crt;
-# 	    ssl_certificate_key /etc/ssl/private/inception.key;
+		# Path to the certificate and key that will be used for HTTPS encryption
+	    ssl_certificate /etc/ssl/certs/inception.crt;
+	    ssl_certificate_key /etc/ssl/private/inception.key;
 
-# 		# Path to the website root (principal folder)
-# 		root /var/www/wordpress;
-# 		# Index file for the website (first page to be loaded)
-# 		index index.php;
+		# Path to the website root (principal folder)
+		root /var/www/wordpress;
+		# Index file for the website (first page to be loaded)
+		index index.php;
 
-# 		# Try to load the requested file, if not found, load the 404 page
-# 		location / {
-# 			try_files $uri $uri/ =404;
-# 		}
+		# Try to load the requested file, if not found, load the 404 page
+		location / {
+			try_files $uri $uri/ =404;
+		}
 
-# 		# Load PHP files with PHP-FPM (FastCGI) on port 9000
-# 		location ~ \.php$ {
-# 			include snippets/fastcgi-php.conf;
-# 			fastcgi_pass wordpress:9000;
-# 		}
-# 	}
-# }
-
-server {
-	listen 443 ssl;
-	listen [::]:443 ssl;
-
-	server_name www.login.1337.ma login.1337.ma;
-
-	ssl_certificate /etc/nginx/certs/MyCertificate.crt;
-      ssl_certificate_key /etc/nginx/certs/MyKey.key;
-
-	ssl_protocols TLSv1.3;
-
-	index index.php;
-	root /var/www/wordpress;
-
-	location / {
-		try_files $uri $uri/ =404;
-	}
-
-    location ~ \.php$ {		
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
+		# Load PHP files with PHP-FPM (FastCGI) on port 9000
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
 	}
 }
