--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mariadb:
-    image: mariadb
+    image: mariadb:v1
     container_name: mariadb
     volumes: 
       - mariadb:/var/lib/mysql
@@ -11,13 +11,11 @@ services:
     build: 
       context: requirements/mariadb
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: /.env
     restart: always
-    expose:
-      - "3306"
 
   nginx:
-    image: nginx
+    image: nginx:v1
     container_name: nginx
     volumes:
       - wordpress:/var/www/wordpress
@@ -28,15 +26,15 @@ services:
     build: 
       context: requirements/nginx
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: /.env
     ports:
       - "443:443"
     restart: always
 
   wordpress:
-    image: wordpress
+    image: wordpress:v1
     container_name: wordpress
-    env_file: .env
+    env_file: /.env
     volumes:
       - wordpress:/var/www/wordpress
     networks:
@@ -47,8 +45,6 @@ services:
     depends_on:
       - mariadb
     restart: always
-    expose: 
-      - "9000"
 
 volumes:
   wordpress:
